[gd_scene format=3 uid="uid://db4sirjvvyawn"]

[ext_resource type="Texture2D" uid="uid://dxd3yyn7or1a4" path="res://Assets/adum.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://ci2k7evljipyb" path="res://Menus/main_menu.gd" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://bnriwwyrbamdr" path="res://Assets/wheel.png" id="2_7vrkn"]
[ext_resource type="Theme" uid="uid://biakj4sw07nf" path="res://theme.tres" id="4_jix8l"]

[sub_resource type="LabelSettings" id="LabelSettings_fu7sn"]
font_size = 54
font_color = Color(0, 0, 0, 1)
outline_size = 28
outline_color = Color(0.8533018, 0.36928457, 0.14164355, 1)

[sub_resource type="LabelSettings" id="LabelSettings_11gta"]
font_size = 37
font_color = Color(0, 0, 0, 1)
outline_size = 18
outline_color = Color(0.8533018, 0.36928457, 0.14164355, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11gta"]
bg_color = Color(0.8343715, 0.4970916, 0.41088095, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.37254903, 0, 0, 1)
corner_radius_top_left = 60
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxdly"]
bg_color = Color(0.8343715, 0.4970916, 0.41088095, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.37254903, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 60
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.8343715, 0.4970916, 0.41088095, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.37181717, 3.7902967e-07, 4.813075e-08, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 60
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxn86"]
bg_color = Color(0.8343715, 0.4970916, 0.41088095, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.37181717, 3.7902967e-07, 4.813075e-08, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Control" unique_id=327771935]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Background" type="TextureRect" parent="." unique_id=2112020329]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_06t4h")
stretch_mode = 1

[node name="Fore" type="TextureRect" parent="." unique_id=1734317607]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -825.0
offset_top = -360.0
offset_right = 825.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7vrkn")

[node name="Title" type="Label" parent="." unique_id=886010733]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -343.0
offset_right = 403.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2
text = "ADUM MOTO RETURNS"
label_settings = SubResource("LabelSettings_fu7sn")
horizontal_alignment = 1

[node name="Completion" type="Label" parent="." unique_id=1324835251]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = 48.0
offset_right = 403.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Completion: 10.5%"
label_settings = SubResource("LabelSettings_11gta")
horizontal_alignment = 1

[node name="Play" type="Button" parent="." unique_id=109784]
layout_mode = 0
offset_left = 668.0
offset_top = 947.0
offset_right = 937.0
offset_bottom = 1031.0
theme = ExtResource("4_jix8l")
text = "Play"

[node name="Quit" type="Button" parent="." unique_id=2116534551]
layout_mode = 0
offset_left = 1644.0
offset_top = 7.0
offset_right = 1913.0
offset_bottom = 91.0
theme = ExtResource("4_jix8l")
text = "Quit"

[node name="Achievements" type="Button" parent="." unique_id=287445138]
layout_mode = 0
offset_left = 668.0
offset_top = 721.0
offset_right = 937.0
offset_bottom = 805.0
theme = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_11gta")
text = "Achievements"

[node name="Options" type="Button" parent="." unique_id=244907946]
layout_mode = 0
offset_left = 974.0
offset_top = 721.0
offset_right = 1243.0
offset_bottom = 805.0
theme = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_cxdly")
text = "Options"

[node name="LevelSelect" type="Button" parent="." unique_id=1404523958]
layout_mode = 0
offset_left = 974.0
offset_top = 947.0
offset_right = 1243.0
offset_bottom = 1031.0
theme = ExtResource("4_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_jix8l")
text = "Levels"

[node name="LevelEditor" type="Button" parent="." unique_id=1471028045]
layout_mode = 0
offset_left = 974.0
offset_top = 833.0
offset_right = 1243.0
offset_bottom = 917.0
theme = ExtResource("4_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_vxn86")
text = "Editor"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="LevelEditor" to="." method="_on_level_editor_pressed"]
